--- a/style.css
+++ b/style.css
@@ -8,12 +8,116 @@
 
 :root {
     font-size: 62.5%;
-
-    --var-color-h1: #34355B;
-    --var-color-h2: #34355B;
-    --var-background-color-message: #000;
 }
 
 body {
-    
+    background: linear-gradient(45deg, #190361, #bb00ff);
+    font-size: 1.6rem;
+    display: grid;
+    place-items: center;
+    height: 100vh;
 }
+
+body, button {
+    font-family: 'DM Sans', sans-serif;
+}
+
+main {
+    background: #FFF;
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.8);
+    padding: 4.8rem 6.4rem 6.4rem;
+    border-radius: .5rem;
+    width: min(42.8rem, 90%);
+    margin-top: -8rem;
+    text-align: center;
+}
+
+.hide {
+    display: none;
+}
+
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.4rem;
+    margin-bottom: 1.6rem;
+}
+
+h1, p {
+    color: #34355b;
+}
+
+#fortuneCookie {
+    width: 300px;
+    height: 200px;
+    background-image: url(assets/Ebene\ 4.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    margin: 20px 30px 0px 0px;
+}
+
+#fortuneCookie:hover {
+    cursor: pointer;
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+}
+
+.screen2 h2 {
+    font-size: 2.4rem;
+    font-family: 'Dancing Script', cursive;
+    font-weight: normal;
+    background-color: #e4edf1;
+    box-shadow: 0 .2rem .4rem rgba(0,0,0,0.1);
+    animation-name: toFadeIn;
+    animation-duration: 2s;
+    text-align: center;  
+    padding: 10px; 
+    box-shadow: 2px 2px 2px rgba(85, 85, 85, 0.5);
+}
+
+#crackedCookie {
+    width: 300px;
+    height: 200px;
+    background-image: url(assets/openedCookie.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+button {
+    background-color: #ff9500;
+    color: white;
+    font-weight: bold;
+    border-radius: .4rem .4rem .4rem .4rem;
+    cursor: pointer;
+    transition: background .3s;
+    border: 0;
+    padding: 1.6rem;
+}
+
+button:hover {
+    background-color: #d37b01;
+}
+
+@keyframes toFadein {
+    0% {
+        transform: 
+        translateY(150px)
+        scale(1);
+    }
+}
+
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
